# ideasfactory

./: .env.example  .gitignore  CLAUDE.md  README.md  SECURITY_UPDATE.md  litellm_log  pyproject.toml
docs/: agent-roles.md  architect-first-pass.md  architect-second-pass.md  architect-third-pass.md  foundational-research-implementation.md  google-search-setup.md  implementation-guidance.md  implementation-status.md  improved-workflow.md  project-idea.md  research-second-pass.md  research-visualizations.md  research-workflow-outcome.md
docs/bkp/: dimensional-research.md  improved-research-workflow.md  specialized-research-teams.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/ideasfactory/: __init__.py
src/ideasfactory/agents/: __init__.py  architect.py  business_analyst.py  foundation_research_team.py  project_manager.py  research_team copy.py  research_team-bkp.py  research_team.py  technology_research_team.py
src/ideasfactory/agents/research_agents/: __init__.py  base_agent.py  coordinator.py  foundation_agent.py  integration_agent.py  models.py  paradigm_agent.py  path_agent.py  repository.py  synthesis_agent.py
src/ideasfactory/documents/: document_manager.py
src/ideasfactory/tools/: __init__.py  data_analysis.py  enhanced_data_analysis.py  enhanced_web_search.py  research_visualization.py  tech_evaluation.py  web_search.py
src/ideasfactory/ui/: app.py  app.tcss
src/ideasfactory/ui/screens/: __init__.py  architecture_screen.py  base_screen.py  (+14 more)
src/ideasfactory/utils/: __init__.py  error_handler.py  file_manager.py  llm_utils.py  log_utils.py  session_manager.py  workflow_progress.py
(+3 files in other folders)
