[project]
name = "ideasfactory"
version = "0.1.0"
description = "Transform your ideas into fully actionable agile style documentation"
readme = "README.md"
authors = [
    { name = "Rodrigo Luglio", email = "rodrigo@rlabs.com.br" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.16",
    "beautifulsoup4>=4.13.4",
    "gitpython>=3.1.44",
    "litellm>=1.66.3",
    "markdown-it-py>=3.0.0",
    "networkx>=3.1.0",
    "pandas>=2.2.3",
    "pydantic>=2.11.3",
    "python-frontmatter>=1.1.0",
    "scipy>=1.15.2",
    "textual>=3.1.0",
    "textual-dev>=1.7.0",
]

[project.scripts]
ideasfactory = "ideasfactory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
